# CppReflectORM

./: .gitignore  CMakeLists.txt  README.md  code.txt  code02.cpp
backup/: dbConnection.cpp
dbORM/: a.out  connect.cpp  connectionsDB.cpp  createTable.cpp  deleteData.cpp  insertData.cpp  queryData.cpp  select.cpp  sqlHelper.cpp  testcode.cpp
dbORM/include/: connection.hpp  connectionsDB.hpp  converter.hpp  createAction.hpp  createTable.hpp  deleteAction.hpp  insertAction.hpp  queryAction.hpp  updateAction.hpp  utility.hpp
dbORM/src/: createTable.cpp
dbTemplateCode/: CMakeLists.txt
dbTemplateCode/src/: code01.cpp  code02.cpp  codeForCreateTable.cpp  converter.cpp  insertData.cpp  testForConverter.cpp
examples/: createAction.cpp  createTabel.cpp  delete.cpp  insertAction.cpp  select.cpp  update.cpp
tests/: CMakeLists.txt  coverage.sh
tests/include/: tableBuilderTest.hpp
tests/src/: example.cpp  executeUT.cpp  tableBuilderTest.cpp
